# Automated_moodle_scraper

./: .gitignore  README.md  diagrams.md  main.py  pyproject.toml  requirements.txt  steps.md
.github/: copilot-instructions.md
src/moodle_scraper/: __init__.py  agent.py  auth.py  browser.py  exporter.py  mcp_server.py  models.py  parser.py  prompt.txt  tools.py  utils.py
tests/: __init__.py  test_auth.py  test_azure_openai.py  test_parser.py
