[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-scraper"
version = "0.1.0"
description = "Automated Moodle quiz scraper powered by Azure OpenAI and MCP"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "openai>=1.30",
    "mcp[cli]>=1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
